-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
A missing membar after buffer initialization in C2's handling of scalarized returns from method handle intrinsics leads to incorrect execution and crashes with compiler/valhalla/inlinetypes/TestBufferTearing.java on aarch64.
- duplicates
-
JDK-8295126 [lworld] compiler/valhalla/inlinetypes/TestBufferTearing.java fails with SIGSEGV in in java.lang.invoke.MethodHandle.linkToSpecial
-
- Closed
-