8295735: [lworld] Missing membar after buffer initialization in method handle return